Add entries to bib, related works

--- a/report/reflist.bib
+++ b/report/reflist.bib
@@ -17,4 +17,35 @@
 	Number = {ISBN 978-0-13-207148-2},
 	Publisher = {Pearson Education},
 	Title = {Artificial Intelligence - A Modern Approach},
-	Year = {2010}}
+	Year = {2010}
+	}
+
+@misc{Ratnaparkhi00,
+    author = {Adwait Ratnaparkhi},
+    title = {Trainable Methods for Surface Natural Language Generation},
+    year = {2000}
+    }
+    
+@book{Jurafsky2000,
+ author = {Jurafsky, Daniel and Martin, James H.},
+ title = {Speech and Language Processing: An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition},
+ year = {2000},
+ isbn = {0130950696},
+ edition = {1st},
+ publisher = {Prentice Hall PTR},
+ address = {Upper Saddle River, NJ, USA}
+} 
+
+@book{NLTKBook09,
+  author = {Steven Bird and Ewan Klein and Edward Loper},
+  title = {{Natural Language Processing with Python}},
+  publisher = {O'Reilly Media},
+  year = {2009}
+}	
+
+@TECHREPORT{Chen98anempirical,
+    author = {Stanley F. Chen},
+    title = {An Empirical Study of Smoothing Techniques for Language Modeling},
+    institution = {},
+    year = {1998}
+}
