Fix merge conflict

--- a/report/reflist.bib
+++ b/report/reflist.bib
@@ -38,14 +38,22 @@
 
 @book{NLTKBook09,
   author = {Steven Bird and Ewan Klein and Edward Loper},
-  title = {{Natural Language Processing with Python}},
+  title = {Natural Language Processing with Python},
   publisher = {O'Reilly Media},
   year = {2009}
 }	
 
-@TECHREPORT{Chen98anempirical,
+@TechReport{Chen98anempirical,
     author = {Stanley F. Chen},
     title = {An Empirical Study of Smoothing Techniques for Language Modeling},
-    institution = {},
     year = {1998}
 }
+
+@book{Reiter:2000:BNL:331955,
+ author = {Reiter, Ehud and Dale, Robert},
+ title = {Building Natural Language Generation Systems},
+ year = {2000},
+ isbn = {0-521-62036-8},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA}
+} 
