--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -106,7 +106,7 @@ The group came up with the idea to compare two different approaches to generatin
 \subsection{Built in grammar model}
 The first approach was to create a model that included both word and grammar information. This was achieved by generating trigrams where each word was a tuple of the word and its associated Part-Of-Speech (POS) tag. A trigram from ``the man walked'' would be (the, DET), (man, NOUN), (walked, VERB)) 
 
-The distribution table contains the n-1-Gram plus the tags as a key and the distribution probability of the next word. In the example above the key would be (the, DET), (man, NOUN) and that row in the table would contain the probability distribution of each word and tag that could follow that word given the corpus.
+The distribution table contains the n-1-gram plus the tags as a key and the distribution probability of the next word. In the example above the key would be (the, DET), (man, NOUN) and that row in the table would contain the probability distribution of each word and tag that could follow that word given the corpus.
 
 To be able to use fallback each model had 2-grams up to n-grams models. If a word/tag was not found using the n-gram model we would fallback to the n-1-gram model and so forth.
 
@@ -126,6 +126,8 @@ The smoothing techniques chosen were:
 \item Expected Likelihood Estimate
 \item Simplified Good-Turing Frequency Estimation
 \end{itemize}
+
+\textbf{Maybe the sections below are not necessary?}
 
 \subsubsection{Maximum Likelihood Estimate}
 Here we will write clever stuff about this smoothing technique
@@ -173,9 +175,7 @@ Each model was used to generate 5 sentences per smoothing method for a total of 
 
 \subsection{Experiment ...}
 
-Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
-bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
-bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+Here we talk about how which smoothing technique worked best for us why the results were the way they were. We also explain why the model containing the grammar was better than the inferred grammar one. 
 
 \begin{figure}
 \centering
@@ -186,9 +186,7 @@ is large enough to read and that the axes are labelled.}
 \label{fig:histogram}
 \end{figure}
 
-Bla bla bla bla bla Figure~\ref{fig:histogram} bla bla bla bla bla bla 
-bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
-bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+
 
 \begin{table}
 \begin{center}
@@ -211,9 +209,11 @@ What answer was found to the research question; what did the study find? Was the
 \section{Summary and Conclusions}
 \label{sec:summary}
 
-Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
-bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
-bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla 
+
+
+We list up the problem we ran into and what we could have done different. 
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -223,6 +223,12 @@ bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
 We the members of project group 61 unanimously declare that 
 we have all equally contributed toward the completion of this
 project.
+
+Should we list up how many hours each member put into the project?
+
+Should we also list up how many hours each part of the project took?
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
