added page numbers at bottom. Moved bibliography to separate page.

--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -30,6 +30,7 @@ hannesso@kth.se & jokull@kth.se & edvarda@kth.se & jonand8@kth.se \\
 \fancyhf{}
 \lhead{DD2380 ai15} % DO NOT REMOVE!!!!
 \rhead{K. Hannesson, J. Jóhannsson, E. Ahlsén, J. Andersson} %% UPDATE WITH YOUR NAMES
+\fancyfoot[C]{\thepage}
 
 \begin{document}
 
@@ -232,6 +233,7 @@ Should we also list up how many hours each part of the project took?
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\clearpage
 \bibliographystyle{plain}
 \bibliography{reflist}
 \end{document}
