--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -91,7 +91,7 @@ In \cite{Ratnaparkhi00} three methods for text generation are examined. One of t
 
 Several textbooks explore the topic of language modelling using n-grams and part of speech tags. Works such as \cite{Jurafsky2000}, \cite{RussellNorvigAIBook3rd}, and \cite{Chen98anempirical} provide excellent tutorials to language modelling and were used extensively in this project. A discussion of n-gram order by \cite{RussellNorvigAIBook3rd} demonstrates that unigrams are a poor representation of the english language and that bigrams and trigrams provide better approximations. Unigrams perform poorly due to the loss of any ordering based on previous words or tokens \cite{RussellNorvigAIBook3rd}. An error in our experiment construction led to the inferred grammar model behaving similarly to this bag of words model.
 
-The Natural Language Tool Kit (NLTK) boosted development productivity through a set of tools such as probability distribution classes, ngram decomposition functions, corpora and corpora importing utilities. We extensively referenced \citep{NLTKBook09} for guidance in use of the NLTK. 
+The Natural Language Tool Kit (NLTK) boosted development productivity through a suite of tools such as probability distribution classes, n-gram decomposition functions, corpora and corpora importing utilities, and speech tagging. We extensively referenced \cite{NLTKBook09} for guidance in use of the NLTK. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
